Bug fixes #34592: Breadcrumb overlaps seat map in occupancy display #34596: Date picker and Breadcrumb display issue

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_seatmap.scss
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_seatmap.scss
@@ -1,7 +1,10 @@
 ﻿@charset "UTF-8";
 .location-breadcrumb{
+  position: relative;
 	height:30px;
-	padding:5px;
+  background-color: white;
+  border-top: 1px solid rgba(0,0,0,.06);
+  border-bottom: 1px solid rgba(0,0,0,.06);
 }
 
 .breadcrumb-inverse{
@@ -10,20 +13,21 @@
 
 .breadcrumb-inverse a, .breadcrumb-inverse>.active {
   color: #09F !important;
-  padding : 0px;
-  margin : 0px;
+  padding: 0px;
+  margin-left : 5px; 
 }
 
 .breadcrumb-inverse span {
+  line-height: 30px;
   margin-left : 5px; 
-  margin-right : 5px; 
 }
 
 
 .date-picker{
 	position:absolute;
-	top:42px;
-	left:38px;
+	top: 40px;
+	right: 0;
+  background-color: white;
 }
 
 a.mfb-component__button--main {
