--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_seatplan.scss
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_seatplan.scss
@@ -75,18 +75,6 @@
 	position:relative;
 }
 
-.seatPlanReport .seatPlanReportHeader{
-	height: 40px;
-	position:relative;
-	z-index:1;
-}
-
-.seatPlanReportHeaderDatePicker {
-	display: block;
-	width: 100%;
-	height: 40px;
-}
-
 .seatPlanReport .wfm-btn{
 	height:100%;
 	margin:0px;
@@ -166,6 +154,19 @@
 .date-picker .wfm-datepicker-wrap{
 	box-shadow:none;
 	border:1px #ededed solid;
+}
+
+.seatPlanReportHeaderDatePicker {
+	position: absolute;
+	top: 30px;
+	right: 0;
+	z-index: 1;
+}
+
+.seatPlanReportHeaderBackButton {
+	padding: 3px;	
+	height: 30px;
+	vertical-align: top;
 }
 
 .seatPlanReportFilter .bottom-bar, .seatPlanReportFilter .filter-header{
